--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@ border-radius:3%;
 	margin-top: 2px;
 	height: 100px;
 	width: 100%;
-	background-image: url(captura.jpg);
+	background-image: url(captura.JPG);
 	background-size: contain;
 	background-repeat: no-repeat;
 	position: relative;
